# docker-mcp

./: .dockerignore  .gitignore  .mcpbignore  CLAUDE.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  MIGRATION-2.0.md  PRIVACY.md  README.md  SECURITY.md  docker-mcp.py  docker_mcp.py  glama.json  manifest.json  mcpb_run.py  pyproject.toml  server.json
.claude/: settings.json
.claude/commands/: docker-sdk.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release.yml
.github/actions/file-failure-issue/: action.yaml
.github/workflows/: canary.yaml  codeql.yaml  images.yaml  premerge.yaml  publish-homebrew.yaml  publish-images.yaml  publish-mcpb.yaml  publish-pypi.yaml  publish-registry.yaml  publish.yaml  release.yaml
assets/: README.md
docker_mcp/: __init__.py  _env.py  _hosts.py  server.py
docker_mcp/tools/: __init__.py  _cli.py  _labels.py  _ssh_proxy.py  _utils.py  buildx.py  client.py  compose.py  configs.py  containers.py  context.py  images.py  networks.py  nodes.py  plugins.py  prompts.py  registry.py  resources.py  scout.py  secrets.py  services.py  stack.py  swarm.py  system.py  volumes.py
docs/: dynamic-tool-loading.md
scripts/: build-mcpb.sh  docker-mcp-server.rb.tpl
tests/: conftest.py  test_buildx.py  test_cli.py  test_client.py  test_compose.py  test_configs.py  test_containers.py  test_context.py  test_env.py  test_hosts.py  test_images.py  test_labels.py  test_main.py  test_naming.py  test_networks.py  test_nodes.py  test_plugins.py  test_prompts.py  test_pyproject_pins.py  test_registry.py  test_resources.py  test_scout.py  test_secrets.py  test_server.py  test_services.py  test_ssh_proxy.py  test_stack.py  test_swarm.py  test_system.py  test_utils.py  test_volumes.py
tests/integration/: conftest.py  test_buildx.py  test_cli.py  test_compose.py  test_containers.py  test_context.py  test_file_payloads.py  test_networks.py  test_nodes.py  test_registry.py  test_scout.py  test_services.py  test_smoke.py  test_stack.py
tools/: __init__.py  _cli.py  _utils.py  buildx.py  client.py  compose.py  configs.py  containers.py  context.py  images.py  networks.py  nodes.py  prompts.py  registry.py  resources.py  scout.py  secrets.py  services.py  swarm.py  volumes.py
