[project]
name = "docker-mcp"
version = "0.1.0"
description = "MCP server for managing Docker resources via the Docker SDK for Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "mcp>=1.27.1",
]

[project.scripts]
docker-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "server.py", "tools"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pyright]
include = ["main.py", "server.py", "tools", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a real Docker daemon (run with `uv run pytest -m integration`)",
]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
    "pre-commit>=4.6.0",
]
