[project]
name = "docker-mcp-server"
version = "1.9.2"
description = "MCP server for managing Docker resources via the Docker SDK for Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = [{ name = "Gavin Lucas" }]
keywords = ["docker", "mcp", "model-context-protocol", "containers", "compose", "swarm", "devops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    # [ssh] pulls paramiko so `ssh://` DOCKER_HOST works through the pure-Python transport — no
    # system `ssh` binary, so it works identically on the host and inside the container images.
    "docker[ssh]>=7.1.0",
    "httpx>=0.28.1",
    "mcp>=1.27.1",
    # Pulled in transitively by docker, but we import requests.exceptions directly
    # (wait_container catches ReadTimeout), so declare it explicitly.
    "requests>=2.26.0",
    # Pulled in transitively via mcp -> pyjwt[crypto]. cryptography 49.x dropped
    # the macosx_10_9_universal2 wheel and now ships an arm64-only macOS wheel, so
    # on Intel (x86_64) macOS the resolver falls back to a source build needing a
    # newer Rust toolchain than many users have (breaking `uvx` installs). 48.x
    # still ships a universal2 wheel that works there. Scoped to Intel macOS via an
    # environment marker so every other platform (incl. macOS arm64) can still take
    # 49.x where wheels exist. Capped here (not in tool.uv.constraint-dependencies,
    # which uvx ignores) so the cap ships in the package metadata. Lift when x86_64
    # macOS wheels return upstream.
    "cryptography<50; platform_system == 'Darwin' and platform_machine == 'x86_64'",
]

[project.scripts]
docker-mcp = "docker_mcp:main"
docker-mcp-server = "docker_mcp:main"

[project.urls]
Homepage = "https://github.com/GavinLucas/docker-mcp"
Repository = "https://github.com/GavinLucas/docker-mcp"
Issues = "https://github.com/GavinLucas/docker-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["docker_mcp"]

[tool.uv]
# Security pin: urllib3 < 2.7.0 has multiple CVEs. Pulled in transitively
# via docker -> requests. Bump when a newer fix is available.
constraint-dependencies = ["urllib3>=2.7.0"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E/F = pycodestyle + pyflakes (ruff defaults), B = flake8-bugbear, S = flake8-bandit
# (security; gives the S603/S310 noqas in _cli.py / resources.py teeth), UP = pyupgrade.
select = ["E", "F", "B", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
# Tests legitimately use assert (S101), hardcoded fixture secrets (S105/S106),
# and /tmp paths as plain string fixtures, not real file operations (S108).
"tests/**" = ["S101", "S105", "S106", "S108"]

[tool.pyright]
include = ["docker_mcp", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a real Docker daemon (run with `uv run pytest -m integration`)",
]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
    "pre-commit>=4.6.0",
]
